# cbx

./: pyproject.toml  setup.cfg  setup.py
cbx/: __init__.py
src/cbx/: __init__.py  cbx.py
